--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo": "^49.0.21",
     "expo-constants": "~14.4.2",
     "expo-file-system": "~15.4.5",
+    "expo-google-app-auth": "^10.0.0",
     "expo-image-picker": "~14.3.2",
     "expo-linear-gradient": "~12.3.0",
     "expo-status-bar": "~1.6.0",
